--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="mat-typography">
+<body class="mat-typography" style="overflow: auto!important;
+max-height: 100% !important;">
     <app-root></app-root>
 </body>
 
