--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Website</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <link href="./assets/css/font-awesome.min.css" rel="stylesheet" />
     <link href="./assets/vendors/line-icon/css/simple-line-icons.css" rel="stylesheet" />
     <link href="./assets/vendors/elegant-icon/style.css" rel="stylesheet" />
